testsuite/tests/rename/should_fail/T4042.stderr

T4042.hs:6:1: error: [GHC-25277]
    Parse error: module header, import declaration
    or top-level declaration expected.
